Fix aboutCountainer margin
Vertical margins were too big

--- a/src/App.css
+++ b/src/App.css
@@ -265,7 +265,7 @@ footer {
     border-radius: 25px;
     box-shadow: rgba(0, 0, 0, 0.35) -5px 5px 15px;
     padding: 3% 5%;
-    margin: 6vh 6% 6vh 6%;
+    margin: 5vh 6% 4vh 6%;
     display: flex;
 }
 
